# ChangeLog for sys-apps/hal
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/hal/Attic/ChangeLog,v 1.111 2006/11/30 07:57:31 dberkholz Exp $

  30 Nov 2006; Donnie Berkholz <dberkholz@gentoo.org>;
  +files/hal-0.5.5.1-RBC.patch, +files/hal-unmount.dev:
  Restore a couple of files needed for 0.5.5.1-r3 that must've been
  accidentally removed.

  20 Nov 2006; Saleem Abdulrasool <compnerd@gentoo.org> hal-0.5.7-r3.ebuild:
  Fix dbus dependencies for dbus-1.0 release

  19 Nov 2006; Doug Goldstein <cardoe@gentoo.org>
  files/hal-0.5.7.1-hibernate-fix.patch:
  patch didn't work for some people

*hal-0.5.7.1-r2 (15 Nov 2006)

  15 Nov 2006; Doug Goldstein <cardoe@gentoo.org>
  +files/hal-0.5.7.1-hibernate-fix.patch,
  +files/hal-0.5.7.1-ignored-volumes.patch, hal-0.5.7.1-r1.ebuild,
  +hal-0.5.7.1-r2.ebuild:
  Fixing bug #155275, bug #147867, bug #140666 (the HAL parts not the KDE
  parts of it), bug #133743, and refactored patch from bug #146910 so I don't
  have to kill Ivan and Fabio.

  31 Oct 2006; <christel@gentoo.org> hal-0.5.7-r3.ebuild:
  Alpha stable

  16 Oct 2006; Stefan Schweizer <genstef@gentoo.org> hal-0.5.7-r3.ebuild,
  -hal-0.5.7.1.ebuild, hal-0.5.7.1-r1.ebuild:
  Handle no kernel sources with eerror instead of die, thanks to Chris
  Gianelloni <wolf31o2@gentoo.org> in bug 129811

  22 Sep 2006; Doug Goldstein <cardoe@gentoo.org>
  -files/hal-0.4.1-old_storage_policy.patch,
  -files/hal-0.4.5-gentoo_gphoto2_usermap.patch,
  -files/hal-0.4.7-sys_floppy_detection.patch,
  -files/hal-0.4.7-vfat_mount_utf8.patch, -files/hal-0.4.8-fix_dvdram.patch,
  -files/hal-unmount.dev, -hal-0.4.8.ebuild:
  Remove old hal-0.4x series\!

  17 Sep 2006; Steev Klimaszewski <steev@gentoo.org> hal-0.5.7.1-r1.ebuild:
  Added split dependency on either dbus-glib *or* dbus, that way, those people
  who have unmasked dbus-glib it will depend on that first, and if not, fall
  back on dbus monolithic.
