@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX 0.5-hald.rc 681 RMD160 f94d4a6e4ffb3beb84eeeb8e25564fa566ecc493 SHA1 fe413a84ee58cefa923cbc922a1c961fbdb17aa6 SHA256 802f83998c50a3e030d1db2f5a8364e4bb10eebecd464683445d63cf56702161
 MD5 facf81eeca7ebddff5d030acb36de31d files/0.5-hald.rc 681
 RMD160 f94d4a6e4ffb3beb84eeeb8e25564fa566ecc493 files/0.5-hald.rc 681
@@ -81,18 +84,18 @@ EBUILD hal-0.5.7-r3.ebuild 5775 RMD160 d6a012c32cee798c8e2df4857589cafa347f3f43 
 MD5 1251fd7925610492793f1a194b7f7716 hal-0.5.7-r3.ebuild 5775
 RMD160 d6a012c32cee798c8e2df4857589cafa347f3f43 hal-0.5.7-r3.ebuild 5775
 SHA256 f388660454c92d1c0a1b99ee9de1c77cdc4a3d95a6596ee6dcd77ed821223e03 hal-0.5.7-r3.ebuild 5775
-EBUILD hal-0.5.7.1-r1.ebuild 5917 RMD160 b7ff504a6522d1b45d65fc3d5e27e84b3f661383 SHA1 f61526316df27ad8740bc9367d4298ddfd72c298 SHA256 47fba625ecffa7737364e283f46675024f775efd3dfa7c669474dd8ad3972c83
-MD5 0761d07be52b7c56065ae2fbff047a92 hal-0.5.7.1-r1.ebuild 5917
-RMD160 b7ff504a6522d1b45d65fc3d5e27e84b3f661383 hal-0.5.7.1-r1.ebuild 5917
-SHA256 47fba625ecffa7737364e283f46675024f775efd3dfa7c669474dd8ad3972c83 hal-0.5.7.1-r1.ebuild 5917
-EBUILD hal-0.5.7.1-r2.ebuild 5927 RMD160 541c023e3f7a2981087a65f6d028cc3496e2ac89 SHA1 bed185e5377efc7cf50eae3abfed915ac54aa7d5 SHA256 82099a78707b22e69f532cb9a09c682933ffd5096fa9c1a3de78a8b492a1902a
-MD5 732c9bda37514b0be81e57a1d94de4a9 hal-0.5.7.1-r2.ebuild 5927
-RMD160 541c023e3f7a2981087a65f6d028cc3496e2ac89 hal-0.5.7.1-r2.ebuild 5927
-SHA256 82099a78707b22e69f532cb9a09c682933ffd5096fa9c1a3de78a8b492a1902a hal-0.5.7.1-r2.ebuild 5927
-MISC ChangeLog 16994 RMD160 1a83a1106ff9c45116e16aae7dc0622c160dc802 SHA1 5b994d370baab0a29caba09144e79b81b5c07937 SHA256 d820f1ef5846d774dc4f6ef8cff567f6a2aae1dd0d3aa496c9ee1e4399475a34
-MD5 ccc2198edac0e72df88221c19698192e ChangeLog 16994
-RMD160 1a83a1106ff9c45116e16aae7dc0622c160dc802 ChangeLog 16994
-SHA256 d820f1ef5846d774dc4f6ef8cff567f6a2aae1dd0d3aa496c9ee1e4399475a34 ChangeLog 16994
+EBUILD hal-0.5.7.1-r1.ebuild 5922 RMD160 519b39cbb69a961acef67cfad6cec7a2c49e3a45 SHA1 9333e9c6e1ecbe2c1dd3da943cd2efb73eebe717 SHA256 74272ad379b14474185238618f573e7e9b93a10b807d3d1eff86c3febf1377f0
+MD5 7a01230641454dd6a0a3fdc061e18ab2 hal-0.5.7.1-r1.ebuild 5922
+RMD160 519b39cbb69a961acef67cfad6cec7a2c49e3a45 hal-0.5.7.1-r1.ebuild 5922
+SHA256 74272ad379b14474185238618f573e7e9b93a10b807d3d1eff86c3febf1377f0 hal-0.5.7.1-r1.ebuild 5922
+EBUILD hal-0.5.7.1-r2.ebuild 5932 RMD160 f8c1c80b9b1de77d21ccdcd92452420b2821a08b SHA1 0e2e8c8f3c933820b264a088374adabb26508f5e SHA256 b62892f228f709e0e425831c99d1acaf45068a5513ee4af69c38eb1c9514babd
+MD5 5112f62ef04c795e99e79a049eae9606 hal-0.5.7.1-r2.ebuild 5932
+RMD160 f8c1c80b9b1de77d21ccdcd92452420b2821a08b hal-0.5.7.1-r2.ebuild 5932
+SHA256 b62892f228f709e0e425831c99d1acaf45068a5513ee4af69c38eb1c9514babd hal-0.5.7.1-r2.ebuild 5932
+MISC ChangeLog 17127 RMD160 8167ba3c259ddb50bc39ff92d0682c483a5cbd4a SHA1 204754e3c1378dd465916ffbda005131bef34284 SHA256 957eaeadba97f9ecd8abd0c11b6807b23ad9f18b37a9211f8c23d032797a459d
+MD5 044c418ee67f0d65ebf5553964b209c9 ChangeLog 17127
+RMD160 8167ba3c259ddb50bc39ff92d0682c483a5cbd4a ChangeLog 17127
+SHA256 957eaeadba97f9ecd8abd0c11b6807b23ad9f18b37a9211f8c23d032797a459d ChangeLog 17127
 MISC metadata.xml 223 RMD160 ca8850c4808c8972fe9995c456578ff23cb4b3fb SHA1 28aa498172fa4c6f437adb79913ae16f4deb0c0c SHA256 49dd14861ed993df9f3509f82bb7f77e524b4b6c0e137677bb9f873d9cd8541d
 MD5 885e3073744523eaf2450514a311758b metadata.xml 223
 RMD160 ca8850c4808c8972fe9995c456578ff23cb4b3fb metadata.xml 223
@@ -109,3 +112,10 @@ SHA256 6fede189bf70fa0a1009bcefea0a23a8941a051256e7fafc16793324db3c61c0 files/di
 MD5 f6986582ab2d32e615cb3dbce02614cd files/digest-hal-0.5.7.1-r2 238
 RMD160 dafbac18b72d6d7d879ccb37200ce33a870bb8a1 files/digest-hal-0.5.7.1-r2 238
 SHA256 6fede189bf70fa0a1009bcefea0a23a8941a051256e7fafc16793324db3c61c0 files/digest-hal-0.5.7.1-r2 238
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v1.4.5 (GNU/Linux)
+
+iD8DBQFFdFAGoeSe8B0zEfwRAgQ0AJ47PF6gp6qf22+KWDfqNC0Kr9fNfACfdAca
+ZAG2vuhHeqD/ozAc9c6J+jw=
+=Yyk2
+-----END PGP SIGNATURE-----
