@@ -1,6 +1,10 @@
 # ChangeLog for sys-apps/hal
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/hal/Attic/ChangeLog,v 1.111 2006/11/30 07:57:31 dberkholz Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/hal/Attic/ChangeLog,v 1.112 2006/12/04 16:43:06 cardoe Exp $
+
+  04 Dec 2006; Doug Goldstein <cardoe@gentoo.org> hal-0.5.7.1-r1.ebuild,
+  hal-0.5.7.1-r2.ebuild:
+  Some depend fixes for the new udev
 
   30 Nov 2006; Donnie Berkholz <dberkholz@gentoo.org>;
   +files/hal-0.5.5.1-RBC.patch, +files/hal-unmount.dev:
